@startuml 03_class_diagram
!theme cerulean-outline
title Sơ đồ Lớp (Class Diagram)\nHệ thống Quản lý Cửa hàng Thiết bị Công nghệ\nPhiên bản: 2.0 — Đồng bộ với code thực tế

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #EBF5FB
  BorderColor #2471A3
  HeaderBackgroundColor #2471A3
  HeaderFontColor white
  FontSize 12
}
skinparam arrow {
  Color #1A5276
}

'============ NGƯỜI DÙNG & XÁC THỰC ============
class NguoiDung {
  +int ma_nguoi_dung
  +String ho_ten
  +String ho
  +String ten_dem
  +String ten
  +String email
  +String mat_khau_ma_hoa
  +Enum vai_tro <<admin|staff|khach_hang>>
  +String so_dien_thoai
  +Text dia_chi
  +String anh_dai_dien
  +int diem_tich_luy
  +Boolean trang_thai
  +Timestamp ngay_xac_thuc_email
  +Timestamp ngay_tao
  +Timestamp ngay_cap_nhat
  --
  +dangKy() : NguoiDung
  +dangNhap() : Token
  +dangXuat() : void
  +capNhatHoSo() : NguoiDung
  +doiMatKhau() : Boolean
  +layDonHang() : DonHang[]
  +layYeuThich() : SanPham[]
  +themDiemTichLuy(diem: int) : void
  +dungDiemTichLuy(diem: int) : Boolean
}

'============ ĐỊA CHỈ ============
class DiaChiNguoiDung {
  +int ma_dia_chi
  +int ma_nguoi_dung
  +String ten_nhan
  +Text dia_chi_day_du
  +String tinh_thanh
  +String quan_huyen
  +Decimal lat
  +Decimal lng
  +Boolean la_mac_dinh
  +Timestamp ngay_tao
  --
  +them() : DiaChiNguoiDung
  +sua() : DiaChiNguoiDung
  +xoa() : Boolean
  +datMacDinh() : void
}

'============ DANH MỤC & THƯƠNG HIỆU ============
class DanhMuc {
  +int ma_danh_muc
  +String ten_danh_muc
  +String duong_dan
  +Text mo_ta
  +String hinh_anh
  +int ma_danh_muc_cha
  +Boolean trang_thai
  +int thu_tu
  +Timestamp ngay_tao
  --
  +them() : DanhMuc
  +sua() : DanhMuc
  +xoa() : Boolean
  +layDanhMucCon() : DanhMuc[]
  +laySanPham() : SanPham[]
}

class ThuongHieu {
  +int ma_thuong_hieu
  +String ten_thuong_hieu
  +String duong_dan
  +String logo
  +String quoc_gia
  +Boolean trang_thai
  +Timestamp ngay_tao
  --
  +them() : ThuongHieu
  +sua() : ThuongHieu
  +xoa() : Boolean
  +laySanPham() : SanPham[]
}

'============ SẢN PHẨM ============
class SanPham {
  +int ma_san_pham
  +String ten_san_pham
  +String duong_dan
  +Text mo_ta
  +Text mo_ta_ngan
  +Decimal gia_goc
  +Decimal gia_khuyen_mai
  +int so_luong_ton
  +int canh_bao_ton_toi_thieu
  +int ma_danh_muc
  +int ma_thuong_hieu
  +String anh_dai_dien
  +Boolean trang_thai
  +Boolean noi_bat
  +int luot_xem
  +Decimal danh_gia_tb
  +int thoi_gian_bao_hanh
  +Decimal phi_van_chuyen
  +Timestamp ngay_tao
  +Timestamp ngay_cap_nhat
  --
  +them() : SanPham
  +sua() : SanPham
  +an() : Boolean
  +timKiem(tuKhoa: String) : SanPham[]
  +loc(params: Object) : SanPham[]
  +capNhatTonKho(sl: int, loai: String) : void
  +layThongSo() : ThongSoKyThuat[]
  +layAnh() : AnhSanPham[]
  +layDanhGia() : DanhGia[]
  +laySanPhamLienQuan() : SanPham[]
}

class ThongSoKyThuat {
  +int ma_thong_so
  +int ma_san_pham
  +String ten_thong_so
  +String gia_tri
  +String don_vi
  +int thu_tu
  --
  +themHangLoat(specs: Array) : void
  +xoaTheoSanPham(maSP: int) : void
}

class AnhSanPham {
  +int ma_anh
  +int ma_san_pham
  +String duong_dan_anh
  +Boolean la_anh_chinh
  +int thu_tu
  --
  +taiLen() : String
  +datAnhChinh() : void
}

class YeuThich {
  +int ma_yeu_thich
  +int ma_nguoi_dung
  +int ma_san_pham
  +Timestamp ngay_them
  --
  +them() : YeuThich
  +xoa() : Boolean
  +kiemTraTonTai(userId, spId) : Boolean
}

'============ GIỎ HÀNG ============
class GioHang {
  +int ma_gio_hang
  +int ma_nguoi_dung
  +Timestamp ngay_tao
  +Timestamp ngay_cap_nhat
  --
  +themSanPham(maSP: int, sl: int) : ChiTietGioHang
  +xoaSanPham(maChiTiet: int) : Boolean
  +capNhatSoLuong(maChiTiet: int, sl: int) : void
  +lamTrong() : void
  +tinhTongTien() : Decimal
  +laySoLuong() : int
}

class ChiTietGioHang {
  +int ma_chi_tiet
  +int ma_gio_hang
  +int ma_san_pham
  +int so_luong
  +Decimal don_gia
  +Timestamp ngay_them
  --
  +tinhThanhTien() : Decimal
}

'============ ĐƠN HÀNG ============
class DonHang {
  +int ma_don_hang
  +int ma_nguoi_dung
  +String ma_code
  +Decimal tam_tinh
  +Decimal so_tien_giam
  +Decimal phi_van_chuyen
  +Decimal so_tien_giam_ship
  +Decimal tong_tien
  +int ma_voucher
  +int ma_voucher_ship
  +int diem_su_dung
  +int diem_tich_duoc
  +Enum trang_thai <<cho_xac_nhan|da_xac_nhan|dang_giao|da_giao|da_huy|hoan_tien>>
  +Enum phuong_thuc_tt <<tien_mat|chuyen_khoan|momo|diem_tich_luy>>
  +Enum trang_thai_tt <<chua_tt|da_tt|da_hoan_tien>>
  +String ten_nguoi_nhan
  +String sdt_nguoi_nhan
  +Text dia_chi_giao_hang
  +Text ghi_chu
  +Timestamp ngay_tao
  +Timestamp ngay_cap_nhat
  --
  +tao() : DonHang
  +capNhatTrangThai(tt: String) : void
  +huy() : Boolean
  +tinhTong() : Decimal
  +layChiTiet() : ChiTietDonHang[]
  +taoMaCode() : String
  +guiThongBao(tt: String) : void
}

class ChiTietDonHang {
  +int ma_chi_tiet
  +int ma_don_hang
  +int ma_san_pham
  +String ten_san_pham
  +String anh_san_pham
  +Decimal don_gia
  +int so_luong
  +Decimal thanh_tien
  --
  +tinhThanhTien() : Decimal
}

'============ VOUCHER ============
class MaGiamGia {
  +int ma_voucher
  +String ma_code
  +String ten_voucher
  +Text mo_ta
  +Enum loai_giam <<percent|fixed_amount|freeship>>
  +Decimal gia_tri_giam
  +Decimal giam_toi_da
  +Decimal don_hang_toi_thieu
  +int so_lan_toi_da
  +int da_su_dung
  +int gioi_han_moi_nguoi
  +Enum loai_voucher <<product|shipping|promo_code>>
  +Boolean trang_thai
  +DateTime ngay_bat_dau
  +DateTime ngay_het_han
  +DateTime ngay_tao
  --
  +kiemTraHopLe(userId: int, giaTriDon: Decimal) : Boolean
  +apDung(giaTriDon: Decimal) : Decimal
  +tangDaSuDung() : void
  +kiemTraHetHan() : Boolean
}

class VoucherNguoiDung {
  +int ma_id
  +int ma_voucher
  +int ma_nguoi_dung
  +Boolean da_su_dung
  +Timestamp ngay_gui
  +Timestamp ngay_su_dung
  --
  +capPhat(userId: int) : void
  +danhDauDaDung() : void
}

class LichSuVoucher {
  +int ma_lich_su
  +int ma_voucher
  +int ma_nguoi_dung
  +int ma_don_hang
  +Decimal so_tien_giam
  +Timestamp ngay_su_dung
  --
  +ghiNhan() : void
}

'============ BẢO HÀNH ============
class YeuCauBaoHanh {
  +int ma_bao_hanh
  +int ma_nguoi_dung
  +int ma_chi_tiet_dh
  +String so_serial
  +Text mo_ta_su_co
  +Enum hinh_thuc <<buu_dien|ship_ve|den_cua_hang>>
  +String so_dien_thoai
  +DateTime lich_hen
  +Enum trang_thai <<cho_xu_ly|da_tiep_nhan|dang_xu_ly|hoan_thanh|tu_choi>>
  +int ma_nhan_vien_xu_ly
  +Text ghi_chu_xu_ly
  +DateTime ngay_tiep_nhan
  +DateTime ngay_hoan_thanh
  --
  +tao() : YeuCauBaoHanh
  +capNhatTrangThai(tt: String, ghiChu: String) : void
  +ganNhanVien(maNV: int) : void
  +guiThongBao() : void
}

'============ ĐÁNH GIÁ ============
class DanhGia {
  +int ma_danh_gia
  +int ma_nguoi_dung
  +int ma_san_pham
  +int ma_chi_tiet_dh
  +int so_sao
  +Text binh_luan
  +Text phan_hoi_admin
  +Timestamp ngay_phan_hoi
  +Boolean da_duyet
  +Timestamp ngay_tao
  --
  +tao() : DanhGia
  +duyet() : void
  +an() : void
  +phanHoi(noiDung: String) : void
  +capNhatDanhGiaTB(maSP: int) : void
}

'============ KHO HÀNG ============
class LichSuKho {
  +int ma_lich_su
  +int ma_san_pham
  +int ma_nguoi_dung
  +int so_luong_bien_dong
  +int ton_kho_truoc
  +int ton_kho_sau
  +Enum loai_giao_dich <<nhap|xuat|dieu_chinh|hoan_tra>>
  +Text ghi_chu
  +String ma_tham_chieu
  +Timestamp ngay_tao
  --
  +ghiNhap(sl: int, ghiChu: String) : void
  +ghiXuat(sl: int, maDH: String) : void
  +ghiDieuChinh(sl: int) : void
}

'============ THÔNG BÁO ============
class ThongBao {
  +int ma_thong_bao
  +int ma_nguoi_dung
  +String tieu_de
  +Text noi_dung
  +String loai
  +Boolean da_doc
  +String ma_tham_chieu
  +Timestamp ngay_tao
  --
  +gui(userId: int) : void
  +guiChoTatCa() : void
  +danhDauDaDoc() : void
  +danhDauTatCaDaDoc(userId: int) : void
}

'============ FLASH SALE ============
class FlashSale {
  +int ma_flash_sale
  +String ten
  +DateTime thoi_gian_bat_dau
  +DateTime thoi_gian_ket_thuc
  +Boolean trang_thai
  +Timestamp ngay_tao
  --
  +tao() : FlashSale
  +capNhat() : FlashSale
  +xoa() : void
  +batTat(trangThai: Boolean) : void
  +kiemTraDangChay() : Boolean
  +layDanhSachSanPham() : ChiTietFlashSale[]
}

class ChiTietFlashSale {
  +int ma_chi_tiet
  +int ma_flash_sale
  +int ma_san_pham
  +Decimal gia_flash
  +int so_luong_gioi_han
  +int da_ban
  --
  +them(maSP: int, gia: Decimal) : void
  +xoa(maSP: int) : void
}

'============ RELATIONSHIPS ============
NguoiDung "1" --o{ DonHang         : "đặt"
NguoiDung "1" --|| GioHang         : "có 1"
NguoiDung "1" --o{ DanhGia         : "viết"
NguoiDung "1" --o{ YeuThich        : "lưu"
NguoiDung "1" --o{ YeuCauBaoHanh   : "yêu cầu"
NguoiDung "1" --o{ ThongBao        : "nhận"
NguoiDung "1" --o{ VoucherNguoiDung: "sở hữu"
NguoiDung "1" --o{ LichSuVoucher   : "sử dụng"
NguoiDung "1" --o{ DiaChiNguoiDung : "lưu địa chỉ"

DonHang "1" *--{ ChiTietDonHang    : "chứa"
DonHang "1" --o| MaGiamGia         : "voucher SP"
DonHang "1" --o| MaGiamGia         : "voucher ship"
DonHang "1" --o{ LichSuVoucher     : "ghi nhận"

GioHang "1" *--o{ ChiTietGioHang   : "chứa"

SanPham "1" --o{ ChiTietDonHang    : "thuộc"
SanPham "1" --o{ ChiTietGioHang    : "thuộc"
SanPham "1" *--{ ThongSoKyThuat    : "có"
SanPham "1" --o{ AnhSanPham        : "gallery"
SanPham "1" --o{ DanhGia           : "nhận"
SanPham "1" --o{ LichSuKho         : "theo dõi"
SanPham "1" --o{ YeuThich          : "được lưu"

SanPham "}o" -- "1|" DanhMuc        : "thuộc"
SanPham "}o" -- "1|" ThuongHieu     : "của"
DanhMuc "1" --o{ DanhMuc            : "cha/con"

MaGiamGia "1" --o{ VoucherNguoiDung : "phân phối"
MaGiamGia "1" --o{ LichSuVoucher    : "được dùng"

ChiTietDonHang "1" --o| YeuCauBaoHanh : "bảo hành"
ChiTietDonHang "1" --o| DanhGia        : "đánh giá"

FlashSale "1" *--{ ChiTietFlashSale   : "chứa"
ChiTietFlashSale "}o" -- "1|" SanPham  : "sản phẩm"

@enduml
